# TradeGraph

./: .env.example  .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.devin/: wiki.json
api/: main.py  models.py  websocket_manager.py
api/routers/: analysis.py  health.py
docs/: index.md
examples/: advanced_usage.py  basic_usage.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/pages/: Dashboard.tsx  Landing.tsx
frontend/src/styles/: globals.css
src/tradegraph_financial_advisor/: __init__.py  main.py
src/tradegraph_financial_advisor/agents/: base_agent.py  financial_agent.py  news_agent.py  recommendation_engine.py  report_analysis_agent.py
src/tradegraph_financial_advisor/config/: settings.py
src/tradegraph_financial_advisor/models/: financial_data.py  recommendations.py
src/tradegraph_financial_advisor/services/: crypto_service.py  firecrawl_service.py
src/tradegraph_financial_advisor/utils/: helpers.py
src/tradegraph_financial_advisor/workflows/: analysis_workflow.py
tests/: conftest.py
tests/unit/: test_agents.py  test_models.py  test_workflows.py
